reference/tests/snapshots/snapshot__run_reference_prql@f-strings-0.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/language-features/f-strings-0.prql
---
SELECT
  CONCAT(first, ' ', last) AS full_name
FROM
  x
