reference/tests/snapshots/snapshot__run_reference_prql@f-strings-1.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/language-features/f-strings-1.prql
---
SELECT
  CONCAT(
    'http',
    tls,
    '://www.',
    domain,
    '.',
    tld,
    '/',
    page
  ) AS url
FROM
  x
