reference/tests/snapshots/snapshot__run_reference_prql@filter-0.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/transforms/filter-0.prql
---
SELECT
  employees.*
FROM
  employees
WHERE
  age > 25
