reference/tests/snapshots/snapshot__run_reference_prql@functions-0.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/functions-0.prql
---
SELECT
  cities.*,
  temp_f - 32 * 3 AS temp_c
FROM
  cities
