reference/tests/snapshots/snapshot__run_reference_prql@introduction-0.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/introduction-0.prql
---
WITH table_0 AS (
  SELECT
    title,
    country_code,
    AVG(salary),
    AVG(salary + payroll_tax),
    SUM(salary),
    SUM(salary + payroll_tax),
    AVG(salary + payroll_tax + benefits_cost),
    SUM(salary + payroll_tax + benefits_cost) AS sum_gross_cost,
    COUNT(*) AS ct
  FROM
    employees
  WHERE
    country_code = 'USA'
    AND salary + payroll_tax + benefits_cost > 0
  GROUP BY
    title,
    country_code
  HAVING
    COUNT(*) > 200
  ORDER BY
    sum_gross_cost
  LIMIT
    20
)
SELECT
  table_0.*,
  countries.*,
  country_code,
  true AS always_true,
  version() AS db_version
FROM
  table_0
  LEFT JOIN countries USING(country_code)
